# tablebase

./: .gitignore  LICENSE  LICENSE.txt  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
html/: tablebase.html
tablebase/: __init__.py  tablebase.py
