[metadata]
description-file = README.rst
name = tablebase
version = 1.6.2
author = Maximilian Lange
author_email = maxhlange@gmail.com
description = A lightweight tool to make tables easily in python.
long_description = file: README.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True

