[metadata]
name = tablebase
version = 1.7.0
author = Maximilian Lange
author_email = maxhlange@gmail.com
url = https://github.com/sasmlange/tablebase
description = A lightweight tool to make tables easily in python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True

